# dicom-forwarder

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  aws_tools.py  azure_tools.py  cloudbuild.yaml  deploy.sh  ingram.json  jira_tools.py  pyproject.toml  server.py  skaffold.yaml  update-secrets.sh
DicomForwarder/: .gitignore  GITHUB_SETUP.md  HOW_TO_RELEASE.md  PUSH_TO_GITHUB.md  QUICK_PUSH.md  README.md  RELEASE.md  TROUBLESHOOTING_SERVICE_CONFIG.md  UPGRADE_INSTRUCTIONS.md  config.json  create_files_checklist.py  generate_all_files.py  push_now.bat  push_to_github.bat  requirements-build.txt  requirements.txt
DicomForwarder/docs/: BUILD_INSTRUCTIONS.md  ENHANCEMENTS.md  FEATURE_IDEAS.md  TESTING.md
DicomForwarder/scripts/: activate_service.py  build.bat  check_connections.bat  check_received_images.bat  check_status.bat  check_storage.bat  create_project.bat  generate_project.py  install_service.bat  quick_test.bat  test_dicom.bat  test_dicom_reception.py  test_dicom_simple.bat  uninstall_service.bat  view_logs.bat  view_recent_logs.bat
DicomForwarder/src/: config_wizard.py  dicom_forwarder.py  windows_service.py
app/core/: logging_config.py
app/templates/: scheduler.html
app/tools/: cron_manager.py
skills/msp/: ticket-triage.md
skills/radiology/: study-volume-monitoring.md
tests/: test_basics.py
vrg-hub/: .env.example  BUILD_FIXES.md  CLAUDE_AI_SETUP.md  CODE_STANDARDS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_MODERNIZATION_SUMMARY.md  DESIGN_SYSTEM.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MODERNIZATION_SUMMARY.md  PERFORMANCE_ASSESSMENT.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE3_IMPLEMENTATION_COMPLETE.md  QUICK_REFERENCE.md  QUICK_START_CLAUDE_API.md  SECURITY_ASSESSMENT.md  SHAREPOINT_ENHANCEMENT_RECOMMENDATIONS.md  SHAREPOINT_MODERNIZATION.md  eslint.config.js  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
vrg-hub/.claude/: settings.local.json
vrg-hub/.lovable/: plan.md
vrg-hub/docs/: D2D-INTEGRATION.md  PERMISSIONS_GUIDE.md  TOP_NAVIGATION_REDESIGN.md  TOP_NAV_MOCKUP.md  (+2 more)
(+518 files in other folders)
