[project]
name = "crowdit-mcp-server"
version = "2.0.0"
description = "Crowd IT Unified MCP Server - HaloPSA, Xero, Front, and SharePoint integration"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "google-cloud-secret-manager>=2.20.0",
    "google-cloud-bigquery>=3.25.0",
    "google-auth>=2.29.0",
    "asyncssh>=2.14.0",
    "pymysql>=1.1.0",
    "google-cloud-build>=3.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
